refacto the folders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,4 @@
 </ul>
 
 <router-outlet></router-outlet>
-<lib-cookie-service [GA_ID] = "'UA_0000_444'" [type]="'dark'"></lib-cookie-service>
+<cookie-service [GA_ID] = "'UA-12345678-1'" [type]="'dark'"></cookie-service>
