--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,8 @@
   </li>
 </ul>
 
+<button type="button" class="btn btn-success" (click)="this.rejectCookie()">Success</button>
+
+
 <router-outlet></router-outlet>
 <cookie-service [GA_ID] = "'UA-12345678-1'" [type]="'dark'"></cookie-service>
