--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,4 @@
 
 
 <router-outlet></router-outlet>
-<cookie-service [GA_ID] = "'UA-12345678-1'" [type]="'dark'"></cookie-service>
+<cookie-service [GA_ID] = "'UA-12345678-1'"></cookie-service>
