--- a/projects/cookie-service/src/lib/cookie-service.component.html
+++ b/projects/cookie-service/src/lib/cookie-service.component.html
@@ -1,5 +1,5 @@
 <div class="alert-cookie bottom" *ngIf="this.showAlertCookie" attr.aria-label="{{ this.header$ | async }}">
-    <div class="row">
+    <div class="crow">
         <div class="col-sm-10">
             <p>
                 <b>{{ this.message$ | async }}</b>
