changing the naming, editing the css color for more accessibility

--- a/projects/cookie-service/src/lib/cookie-service.component.scss
+++ b/projects/cookie-service/src/lib/cookie-service.component.scss
@@ -23,20 +23,20 @@
 
 .cbtn-link {
     font-weight: 400;
-    color: #007bff;
-    text-decoration: none;
+    color: #3D9BFF;
+    background-color: transparent;
 }
 
 .cbtn-success {
     color: #fff;
-    background-color: #28a745;
-    border-color: #28a745;
+    background-color: #266433;
+    border-color: #266433;
 }
 
 .cbtn-warning {
-    color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    color: #000;
+    background-color: #f36e15f5;
+    border-color: #f36e15f5;
 }
 
 .crow {
