--- a/projects/cookie-service/src/lib/cookie-service.component.html
+++ b/projects/cookie-service/src/lib/cookie-service.component.html
@@ -1,15 +1,15 @@
-<div class="alert-cookie bottom" *ngIf="showAlertCookie" attr.aria-label="{{ header$ | async }}" [ngStyle]="cssClass(HeaderColor, HeaderBackgroundColor )">
+<div class="alert-cookie bottom" *ngIf="showAlertCookie" attr.aria-label="{{ header }}" [ngStyle]="cssClass(HeaderColor, HeaderBackgroundColor )">
     <div class="row">
         <div class="col-sm-10">
             <p>
-                <b>{{ message$ | async }}</b>
-                <a *ngIf="LearnMoreEnable$ | async " href="{{ LearnMoreLink$ | async }}" attr.aria-label="{{ LearnMoreMessage$ | async }}">{{ LearnMoreMessage$ | async }}</a>
+                <b>{{ message }}</b>
+                <a *ngIf="LearnMoreEnable " href="{{ LearnMoreLink }}" attr.aria-label="{{ LearnMoreMessage }}">{{ LearnMoreMessage }}</a>
             </p>
         </div>
         <div class="col-sm-2">
-            <button *ngIf="DenyEnable$ | async " type="button" class="cbtn" (click)="this.deny()" attr.aria-label="{{ DenyMessage$ | async }}" [ngStyle]="cssClass(AcceptColor, 'transparent' )">{{ DenyMessage$ | async }}</button>
-            <button *ngIf="AllowEnable$ | async " type="button" class="cbtn" (click)="this.allow()" attr.aria-label="{{ AllowMessage$ | async }}" [ngStyle]="cssClass(AllowColor, AllowBackgroundColor)">{{ AllowMessage$ | async }}</button>
-            <button *ngIf="AcceptEnable$ | async " type="button" class="cbtn" (click)="this.allow()" attr.aria-label="{{ AcceptMessage$ | async }}" [ngStyle]="cssClass(AcceptColor, AcceptBackgroundColor)">{{ AcceptMessage$ | async }}</button>
+            <button *ngIf="DenyEnable " type="button" class="cbtn" (click)="this.deny()" attr.aria-label="{{ DenyMessage }}" [ngStyle]="cssClass(AcceptColor, 'transparent' )">{{ DenyMessage }}</button>
+            <button *ngIf="AllowEnable " type="button" class="cbtn" (click)="this.allow()" attr.aria-label="{{ AllowMessage }}" [ngStyle]="cssClass(AllowColor, AllowBackgroundColor)">{{ AllowMessage }}</button>
+            <button *ngIf="AcceptEnable " type="button" class="cbtn" (click)="this.allow()" attr.aria-label="{{ AcceptMessage }}" [ngStyle]="cssClass(AcceptColor, AcceptBackgroundColor)">{{ AcceptMessage }}</button>
         </div>
     </div>
 </div>
