refacto of the interface, adding a function emit event when banner is open or cclose

--- a/projects/cookie-service/src/lib/cookie-service.component.html
+++ b/projects/cookie-service/src/lib/cookie-service.component.html
@@ -13,3 +13,7 @@
         </div>
     </div>
 </div>
+
+<div class="bottom" *ngIf="!showAlertCookie && ReviewEnable" attr.aria-label="{{ Review }}">
+    <span class="badge badge-pill badge-info" (click)="this.review()" [ngStyle]="cssClass(ReviewColor, ReviewBcolor )">{{Review}}</span>
+</div>
