linting cookie service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,4 +94,4 @@
 </div>
 <br>
 <router-outlet></router-outlet>
-<cookie-service (isOpened)="onOpen($event)" ></cookie-service>
+<lib-cookie-service (isOpened)="onOpen($event)" ></lib-cookie-service>
