--- a/projects/cookie-service/src/lib/cookie-service.component.html
+++ b/projects/cookie-service/src/lib/cookie-service.component.html
@@ -14,6 +14,6 @@
     </div>
 </div>
 
-<div class="bottom" *ngIf="!showAlertCookie && ReviewEnable" attr.aria-label="{{ Review }}">
-    <button class="btn btn-dark btn-sm" (click)="this.review()" href="#" [ngStyle]="cssClass(ReviewColor, ReviewBcolor )">{{Review}}</button>
+<div class="bottom" *ngIf="!showAlertCookie && ReviewEnable">
+    <button class="btn btn-dark btn-sm" (click)="this.review()" href="#" [ngStyle]="cssClass(ReviewColor, ReviewBcolor )"  attr.aria-label="{{ Review }}">{{Review}}</button>
 </div>
