--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-
-<div class="container" style="text-align:center">
-  <h1>
-    {{ title }}
-  </h1>
+<div>
+  <nav class="navbar navbar-light" style="background-color: #e6e3e3ee;">
+      <a href="#" class="navbar-brand" attr.aria-label="{{ title }}">{{ title }}</a>
+      <form class="form-inline">
+        <a class="nav-link mr-sm-2 underlining" aria-label="Link to Cookie Service Banner Repository" href="https://github.com/liyokuna/cookie-consent">Github</a>
+      </form>
+    </nav>
 </div>
 <div class="container">
   <h2>Introduction</h2>
@@ -17,8 +19,8 @@
     <h2>Dependecies</h2>
     <div class="row">
       <ul>
-        <li><a href="https://angular.io/">Angular</a>, the latest version of Angular 7+</li>
-        <li><a href="https://getbootstrap.com/">Bootstrap</a>, the latest version of Bootsrap 4+ </li>
+        <li><a href="https://angular.io/" aria-label="link to Angular Website">Angular</a>, the latest version of Angular 7+</li>
+        <li><a href="https://getbootstrap.com/" aria-label="link to Bootsrap Website">Bootstrap</a>, the latest version of Bootsrap 4+ </li>
       </ul>
     </div>
   </div>
