--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,12 @@ code {
     color: #93104D;
     background-color: #EDEDED;
 }
+
+.underlining {
+    border-bottom: 2px solid black;
+}
+
+.underlining:hover {
+    border: 2px solid black;
+    border-radius:20% / 80%;
+}
