--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,11 +34,11 @@
         <code>npm install cookie-service</code>
       </p>
       <p>After installing, you need to import the main module:
-        <code>import {{ '{' }} CookieServiceModule {{ '}' }} from 'cookie-service';</code>
+        <code>import {{ '{' }} CookieServiceModule {{ '}' }} from 'cookie-service-banner';</code>
       </p>
       <p>The full configuration:</p>
         <code>
-          import {{ '{' }} CookieServiceModule, CookieConfig {{ '}' }} from 'cookie-service';<br>
+          import {{ '{' }} CookieServiceModule, CookieConfig {{ '}' }} from 'cookie-service-banner';<br>
 
           const testLibConfig: CookieConfig = {{ '{' }}<br>
           header: {{ '{' }}<br>
@@ -55,7 +55,7 @@
             color: '#fff',<br>
             bcolor: '#266433'<br>
             {{ '}' }},<br>
-          allowtButton: {{ '{' }}<br>
+          allowButton: {{ '{' }}<br>
             enable: true,<br>
             allow: "Allow Cookie",<br>
             color: '#000',<br>
